--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "css-loader": "^0.28.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.24.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
     "transfer-webpack-plugin": "^0.1.4",
     "webpack": "^1.13.3",
@@ -29,18 +31,22 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-loader": "^6.4.1",
+    "image-webpack-loader": "^3.3.0",
     "interact.js": "^1.2.8",
-    "material-ui": "^0.16.4",
+    "material-ui": "^0.17.4",
+    "postcss": "^5.2.17",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.5.2",
     "react-big-calendar": "^0.13.0",
     "react-calendar-timeline": "^0.11.1",
     "react-dates": "^10.1.1",
+    "react-day-picker": "^5.3.0",
     "react-dom": "^15.4.1",
     "react-icons": "^2.2.3",
     "react-infinite-calendar": "^2.1.6",
     "react-notification-system": "^0.2.13",
     "react-tap-event-plugin": "^2.0.1",
+    "react-tooltip": "^3.3.0",
     "recharts": "^0.22.1"
   }
 }
