--- a/package.json
+++ b/package.json
@@ -35,16 +35,14 @@
     "image-webpack-loader": "^3.3.0",
     "interact.js": "^1.2.8",
     "material-ui": "^0.17.4",
+    "moment-timezone": "^0.5.13",
     "postcss": "^5.2.17",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.5.2",
-    "react-big-calendar": "^0.13.0",
-    "react-calendar-timeline": "^0.11.1",
     "react-dates": "^10.1.1",
     "react-day-picker": "^5.3.0",
     "react-dom": "^15.4.1",
     "react-icons": "^2.2.3",
-    "react-infinite-calendar": "^2.1.6",
     "react-notification-system": "^0.2.13",
     "react-tap-event-plugin": "^2.0.1",
     "react-tooltip": "^3.3.0",
