--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "postcss-loader": "^1.3.3",
     "style-loader": "^0.16.1",
     "transfer-webpack-plugin": "^0.1.4",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
     "webpack-dev-server": "^1.16.2"
