--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-loader": "^6.4.1",
-    "image-webpack-loader": "^3.3.0",
+    "image-webpack-loader": "^3.3.1",
     "interact.js": "^1.2.8",
     "material-ui": "^0.17.4",
     "moment-timezone": "^0.5.13",
+    "papaparse": "^4.3.2",
     "postcss": "^5.2.17",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.5.2",
@@ -45,6 +46,8 @@
     "react-icons": "^2.2.3",
     "react-notification-system": "^0.2.13",
     "react-tap-event-plugin": "^2.0.1",
-    "react-tooltip": "^3.3.0"
+    "react-tooltip": "^3.3.0",
+    "react-virtualized-select": "^3.0.1",
+    "url-loader": "^0.5.8"
   }
 }
