--- a/package.json
+++ b/package.json
@@ -8,21 +8,41 @@
   },
   "scripts": {
     "start": "webpack-dev-server --config webpack-dev-server.config.js --progress --inline --colors",
-    "build": "webpack --config webpack-production.config.js --progress --colors"
+    "build": "webpack --config webpack-production.config.js --progress --colors",
+    "test": "jest"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "/__mocks__/fileMock.js",
+      "\\.(css|less)$": "identity-obj-proxy"
+    },
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   },
   "private": true,
   "devDependencies": {
     "babel-core": "^6.18.2",
+    "babel-jest": "^20.0.3",
     "babel-loader": "^6.2.8",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "css-loader": "^0.28.0",
+    "enzyme": "^2.8.2",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.24.1",
+    "identity-obj-proxy": "^3.0.0",
+    "ignore-styles": "^5.0.1",
+    "jest": "^20.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "postcss-loader": "^1.3.3",
+    "react-addons-test-utils": "^15.5.1",
     "style-loader": "^0.16.1",
     "transfer-webpack-plugin": "^0.1.4",
     "uglifyjs-webpack-plugin": "^0.4.3",
@@ -33,6 +53,9 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-loader": "^6.4.1",
+    "i18next": "^8.4.2",
+    "i18next-browser-languagedetector": "^2.0.0",
+    "i18next-xhr-backend": "^1.4.2",
     "image-webpack-loader": "^3.3.1",
     "interact.js": "^1.2.8",
     "material-ui": "^0.17.4",
@@ -43,6 +66,7 @@
     "react-addons-css-transition-group": "^15.5.2",
     "react-day-picker": "^5.3.0",
     "react-dom": "^15.4.1",
+    "react-i18next": "^4.6.1",
     "react-icons": "^2.2.3",
     "react-notification-system": "^0.2.13",
     "react-tap-event-plugin": "^2.0.1",
