--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-preset-stage-2": "^6.18.0",
     "css-loader": "^0.28.0",
     "enzyme": "^2.8.2",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.24.1",
     "identity-obj-proxy": "^3.0.0",
@@ -53,6 +54,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "babel-loader": "^6.4.1",
+    "chart.js": "^2.6.0",
     "i18next": "^8.4.2",
     "i18next-browser-languagedetector": "^2.0.0",
     "i18next-xhr-backend": "^1.4.2",
@@ -62,10 +64,14 @@
     "moment-timezone": "^0.5.13",
     "papaparse": "^4.3.2",
     "postcss": "^5.2.17",
+    "rc-progress": "^2.2.1",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.5.2",
+    "react-chartjs-2": "^2.1.0",
+    "react-chartjs2": "^1.1.2",
     "react-day-picker": "^5.3.0",
     "react-dom": "^15.4.1",
+    "react-grid-layout": "^0.14.6",
     "react-i18next": "^4.6.1",
     "react-icons": "^2.2.3",
     "react-notification-system": "^0.2.13",
