--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
   },
   "private": true,
   "devDependencies": {
-    "babel-core": "^6.18.2",
+    "babel-core": "^6.25.0",
     "babel-jest": "^20.0.3",
-    "babel-loader": "^6.2.8",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.18.0",
+    "babel-preset-stage-3": "^6.24.1",
     "css-loader": "^0.28.0",
     "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "^2.1.2",
@@ -53,7 +57,6 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
-    "babel-loader": "^6.4.1",
     "chart.js": "^2.6.0",
     "i18next": "^8.4.2",
     "i18next-browser-languagedetector": "^2.0.0",
