--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "DNNwebportal",
-  "version": "0.1.0",
+  "version": "0.1.5",
   "description": "ITRI DNN web portal",
   "repository": {
     "type": "git",
     "url": "https://a40503@bitbucket.org/a40503/dnnwebportal.git"
   },
   "scripts": {
-    "start": "webpack-dev-server --config webpack-dev-server.config.js --progress --inline --colors",
+    "start": "webpack-dev-server --config webpack-dev-server.config.js --progress --inline --colors --hot",
     "build": "webpack --config webpack-production.config.js --progress --colors",
     "test": "jest"
   },
@@ -48,12 +48,13 @@
     "less-loader": "^4.0.3",
     "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "^15.5.1",
+    "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.16.1",
     "transfer-webpack-plugin": "^0.1.4",
     "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "^0.5.8",
     "webpack": "^2.5.1",
-    "webpack-dev-server": "^1.16.2"
+    "webpack-dev-server": "^2.6.1"
   },
   "dependencies": {
     "axios": "^0.16.1",
