--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.24.1",
+    "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.0",
     "enzyme": "^2.8.2",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
+    "happypack": "^4.0.0-beta.1",
     "html-webpack-plugin": "^2.24.1",
     "identity-obj-proxy": "^3.0.0",
     "ignore-styles": "^5.0.1",
