--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "chart.js": "^2.6.0",
+    "crypto-js": "^3.1.9-1",
     "firebase": "^4.2.0",
     "i18next": "^8.4.2",
     "i18next-browser-languagedetector": "^2.0.0",
