--- a/package.json
+++ b/package.json
@@ -89,6 +89,8 @@
     "react-tap-event-plugin": "^2.0.1",
     "react-tooltip": "^3.3.0",
     "react-virtualized-select": "^3.0.1",
+    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-react": "^0.71.3",
     "url-loader": "^0.5.8"
   }
 }
