add redux, react-redux, redux-logger, redux-promise, redux-thunk  (REDUX!!!)

--- a/package.json
+++ b/package.json
@@ -87,9 +87,14 @@
     "react-i18next": "^4.6.1",
     "react-icons": "^2.2.3",
     "react-notification-system": "^0.2.13",
+    "react-redux": "^5.0.6",
     "react-tap-event-plugin": "^2.0.1",
     "react-tooltip": "^3.3.0",
     "react-virtualized-select": "^3.0.1",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-css": "^2.2.12",
     "semantic-ui-react": "^0.71.3",
     "url-loader": "^0.5.8"
