--- a/package.json
+++ b/package.json
@@ -71,9 +71,13 @@
     "i18next-xhr-backend": "^1.4.2",
     "image-webpack-loader": "^3.3.1",
     "interact.js": "^1.2.8",
+    "jquery": "^3.2.1",
+    "jspdf": "^1.3.3",
     "material-ui": "^0.17.4",
     "papaparse": "^4.3.2",
+    "pdfmake": "^0.1.32",
     "postcss": "^5.2.17",
+    "rasterizehtml": "^1.2.4",
     "rc-progress": "^2.2.1",
     "react": "^15.6.1",
     "react-addons-css-transition-group": "^15.5.2",
