--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "DNNwebportal",
   "version": "0.1.6",
   "description": "ITRI DNN web portal",
+  "author": "a40503",
   "repository": {
     "type": "git",
     "url": "https://a40503@bitbucket.org/a40503/dnnwebportal.git"
@@ -11,7 +12,8 @@
     "app": "webpack --config webpack-production.config.js --progress --colors",
     "test": "jest",
     "dll": "webpack -p --progress --config webpack.dll.config.js --colors",
-    "build": "npm run dll & npm run app"
+    "build": "npm run dll & npm run app",
+    "doc": "react-doc-generator ./src/app/components/ -o DOCUMENTATION.md"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -52,6 +54,7 @@
     "less-loader": "^4.0.3",
     "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "^15.5.1",
+    "react-doc-generator": "^1.2.5",
     "react-hot-loader": "^3.0.0-beta.7",
     "style-loader": "^0.16.1",
     "transfer-webpack-plugin": "^0.1.4",
