add styleguide and react-docgen, remove jquery

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "test": "jest",
     "dll": "webpack -p --progress --config webpack.dll.config.js --colors",
     "build": "npm run dll & npm run app",
-    "doc": "react-doc-generator ./src/app/components/ -o DOCUMENTATION.md"
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -55,7 +56,9 @@
     "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "^15.5.1",
     "react-doc-generator": "^1.2.5",
+    "react-docgen": "^2.18.0",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-styleguidist": "^6.0.24",
     "style-loader": "^0.16.1",
     "transfer-webpack-plugin": "^0.1.4",
     "uglifyjs-webpack-plugin": "^0.4.3",
@@ -74,7 +77,6 @@
     "i18next-xhr-backend": "^1.4.2",
     "image-webpack-loader": "^3.3.1",
     "interact.js": "^1.2.8",
-    "jquery": "^3.2.1",
     "jspdf": "^1.3.3",
     "material-ui": "^0.17.4",
     "papaparse": "^4.3.2",
