--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "compression-webpack-plugin": "^1.0.0",
     "css-loader": "^0.28.0",
     "enzyme": "^2.8.2",
+    "eslint-plugin-prettier": "^2.3.1",
     "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "^0.11.1",
     "happypack": "^4.0.0-beta.1",
@@ -80,6 +81,7 @@
     "interact.js": "^1.2.8",
     "jspdf": "^1.3.3",
     "material-ui": "^0.17.4",
+    "moment": "^2.18.1",
     "papaparse": "^4.3.2",
     "pdfmake": "^0.1.32",
     "postcss": "^5.2.17",
