--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "jest": "^20.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
+    "nyan-progress-webpack-plugin": "^1.2.0",
     "postcss-loader": "^1.3.3",
     "react-addons-test-utils": "^15.5.1",
     "react-doc-generator": "^1.2.5",
